syntax = "proto3";

package com.solarsan.blog;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.solarsan.blog";

service BlogService {
  rpc createUser(NewUserRequest) returns (IdMessage) {}
  rpc createNote(NewNoteRequest) returns (google.protobuf.Empty) {}
  rpc getUser(IdMessage) returns (User) {}
  rpc getUsers(google.protobuf.Empty) returns (UsersResponse) {}
}

message IdMessage {
  string id = 1;
}

message NewUserRequest {
  string name = 1;
}

message NewNoteRequest {
  string userId = 1;
  Note note = 2;
}

message Note {
  string title = 1;
  Category category = 2;
  string content = 3;
}

enum Category {
  LIFESTYLE = 0;
  FASHION = 1;
  SPORT = 2;
}

message User {
  string id = 1;
  string name = 2;
  repeated Note notes = 3;
}

message UsersResponse {
  repeated User users = 1;
}
